IDEK literally everything overhaul